deploy/dev/k8s-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zen-pg
  labels:
    app: zen-pg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zen-pg
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zen-pg
    spec:
      containers:
        - name: zen-pg
          image: postgres:14
          resources:
            requests:
              cpu: "100m"
              memory: "2Gi"
            limits:
              cpu: "0"
              memory: "4Gi"
          ports:
            - containerPort: 5432
              name: zen-pg-port
          volumeMounts:
            - name: zen-pg-pv-claim
              readOnly: false
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: zen-pg-pv-claim
          hostPath:
            # https://kubernetes.io/docs/concepts/storage/volumes/#hostpath
            # Linux: /home/username/simplest-k8s/host-mount
            # macOS: /Users/yourusername/path/to/repo/simplest-k8s/host-mount
            # Windows: /Users/username/code/simplest-k8s/host-mount
            path: /home/z/host-mount
---
apiVersion: v1
kind: Service
metadata:
  name: zen-pg-svc
spec:
  type: NodePort
  ports:
    - name: postgresql
      port: 5432
      targetPort: zen-pg-port
      protocol: TCP
  selector:
    app: zen-pg
