deploy/dev/k8s-setup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zen-api
  labels:
    app: zen-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zen-api
  template:
    metadata:
      labels:
        app: zen-api
    spec:
      containers:
        - name: zen-api
          image: zen-api:latest
          imagePullPolicy: Never
          resources:
            requests:
              memory: "700Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: zen-api-svc
spec:
  selector:
    app: zen-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 7080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zen-ingress
  labels:
    name: zen-ingress
spec:
  tls:
  - hosts:
    - zen.rancher.localhost
  rules:
  - host: zen.rancher.localhost
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: zen-api-svc
            port:
              number: 80
